# stretchmeal

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  turbo.json
rug-pipeline/: .gitignore  README.md  config.py  conftest.py  pipeline.py  pyproject.toml  requirements.txt
rug-pipeline/detection/: border_detect.py
rug-pipeline/ingest/: flatten.py  validate.py
rug-pipeline/scaling/: cache.py  layered_psd.py  nine_slice.py  resize.py
rug-pipeline/storage/: backend.py  local.py  s3.py
rug-pipeline/tests/: smoke_test_real_psd.py  test_border_detect.py  test_ingest.py  test_integration.py  test_layered_psd.py  test_nine_slice.py  test_scaling.py  test_storage.py
rug-pipeline/tools/: demo_compare.py  generate_demo_rug.py
rug-pipeline/web/: app.py
rug-pipeline/web/static/: tagger.js
rug-pipeline/web/templates/: index.html
